crates/rattler_repodata_gateway/src/gateway/snapshots/rattler_repodata_gateway__gateway__test__package_format_selection_is_the_same_for_every_source@all.snap
---
source: crates/rattler_repodata_gateway/src/gateway/mod.rs
expression: expected
---
foo-1-0.conda
foo-1-0.tar.bz2
foo-1-0.whl
foo-10-0.whl.conda
foo-2-0.conda
foo-2-0.tar.bz2
foo-3-0.tar.bz2
foo-3-0.whl
foo-4-0.tar.bz2
foo-5-0.whl
foo-6-0.conda
foo-7-0.tar.bz2
foo-8-0.tar.bz2
foo-9-0.conda (v3)
