crates/rattler_repodata_gateway/src/gateway/snapshots/rattler_repodata_gateway__gateway__test__package_format_selection_is_the_same_for_every_source@only-tar-bz2.snap
---
source: crates/rattler_repodata_gateway/src/gateway/mod.rs
expression: expected
---
foo-1-0.tar.bz2
foo-2-0.tar.bz2
foo-3-0.tar.bz2
foo-4-0.tar.bz2
foo-7-0.tar.bz2
foo-8-0.tar.bz2
